[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchqpt"
version = "0.1.0"
description = "A PyTorch-based library for quantum process tomography simulation and machine learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yufeng Wang"},
    {name = "Lu Wei"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch",
    "numpy",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/torchqpt"
"Bug Tracker" = "https://github.com/yourusername/torchqpt/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["torchqpt"]

[tool.setuptools.package-data]
"torchqpt" = ["py.typed"] 